--- a/src/components/name/style.styles.scss
+++ b/src/components/name/style.styles.scss
@@ -1,4 +1,34 @@
-.form{
+form{
     display: flex;
     flex-direction: column;
+    margin: auto;
+    margin-top: 15px;
+    .inputs{
+        font-size: xx-large;
+        width:80%;
+        // display: flex;
+        flex-direction: row;
+        margin: auto;
+        margin-left: 25%;
+        input{
+            margin-left: 20px;
+            height: 40px;
+            width:25%;
+            font-size: x-large;
+            font-family: 'Pridi', serif;
+            color: #2f3235;
+            
+        }
+        margin-bottom: 25px;
+        span{width:70%;color: #2f3235;font-family: 'Pridi', serif;font-size: x-large; font-weight: 600;}
+    }
+}button{
+    background-color: #52db46;
+    width: 100px;
+    margin: auto;
+    height: 40px;
+    border: 2px solid #52db46;
+    border-radius: 4px 4px;
+    color: white;
 }
+
